--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-telegram-bot-api": "^0.61.0",
-    "nodemon": "^2.0.20"
+    "@types/node-telegram-bot-api": "^0.57.6",
+    "dotenv": "^16.0.3",
+    "node-telegram-bot-api": "^0.58.0",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   }
 }
